# neocache

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  autoresearch.checks.sh  autoresearch.ideas.md  autoresearch.jsonl  autoresearch.md  autoresearch.sh  deny.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: audit.yml  ci.yml  loom.yml  miri.yml  sanitizers.yml
benches/: throughput.rs
docs/: algorithm.md  api-reference.md  architecture.md  index.md  internals.md  usage-guide.md
src/: iter.rs  lib.rs  lock.rs  rayon_impl.rs  read_only.rs  ser.rs  shard.rs  t.rs  try_result.rs  util.rs
src/mapref/: entry.rs  mod.rs  multiple.rs  one.rs
tests/: concurrent.rs  coverage.rs  loom.rs
