[package]
name = "s3dashmap"
version = "0.1.0"
edition = "2024"
description = "A concurrent HashMap with S3-FIFO cache eviction, forked from DashMap"
license = "MIT"
keywords = ["cache", "concurrent", "hashmap", "eviction", "s3fifo"]
categories = ["data-structures", "concurrency"]

[dependencies]
# hashbrown is pinned to 0.14.x. In 0.15+ the `raw` module became private,
# removing RawTable, Bucket, InsertSlot and RawIter — the exact APIs this crate
# uses for zero-copy per-shard storage and eviction. Upgrading requires a full
# rewrite of the storage layer around the new HashTable API.
hashbrown = { version = "0.14.5", features = ["raw"], default-features = false }
lock_api = "0.4.12"
parking_lot_core = "0.9.12"
crossbeam-utils = "0.8.21"
cfg-if = "1.0.0"
once_cell = "1.21.3"
ahash = { version = "0.8.12", default-features = false, features = ["std"] }

[dev-dependencies]
rand = "0.9.2"
